projects/vb6parse/snapshots/tests/library/string/instrrev/instrrev_do_loop.snap
---
source: projects/vb6parse/tests/library/string/instrrev.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: DoStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: DoKeyword
                  text: Do
                - kind: Whitespace
                  text: " "
                - kind: WhileKeyword
                  text: While
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: InStrRev
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: path
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: StringLiteralExpression
                                  children:
                                    - kind: StringLiteral
                                      text: "\"\\\""
                        - kind: RightParenthesis
                          text: )
                    - kind: Whitespace
                      text: " "
                    - kind: GreaterThanOperator
                      text: ">"
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "0"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: path
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: Left$
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: path
                                - kind: Comma
                                  text: ","
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: BinaryExpression
                                      children:
                                        - kind: CallExpression
                                          children:
                                            - kind: Identifier
                                              text: InStrRev
                                            - kind: LeftParenthesis
                                              text: (
                                            - kind: ArgumentList
                                              children:
                                                - kind: Argument
                                                  children:
                                                    - kind: IdentifierExpression
                                                      children:
                                                        - kind: Identifier
                                                          text: path
                                                - kind: Comma
                                                  text: ","
                                                - kind: Whitespace
                                                  text: " "
                                                - kind: Argument
                                                  children:
                                                    - kind: StringLiteralExpression
                                                      children:
                                                        - kind: StringLiteral
                                                          text: "\"\\\""
                                            - kind: RightParenthesis
                                              text: )
                                        - kind: Whitespace
                                          text: " "
                                        - kind: SubtractionOperator
                                          text: "-"
                                        - kind: Whitespace
                                          text: " "
                                        - kind: NumericLiteralExpression
                                          children:
                                            - kind: IntegerLiteral
                                              text: "1"
                            - kind: RightParenthesis
                              text: )
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: LoopKeyword
                  text: Loop
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
